# wasm-cairo

./: Cargo.toml  README.md  app.js  package.json  test.cairo  test.sierra  wasmtime_test.sh
.github/workflows/: npm-publish.yml
cairo_files/: HelloStarknetAstro.cairo  HelloStarknetAstro.sierra  NameRegistry.cairo  Test.cairo  erc20.cairo  erc721.cairo  test.cairo  testing.sierra
src/: cli.rs  lib.rs
