[package]
name = "wasm-cairo"
version = "0.9.2"
authors = ["cryptonerdcn <cryptonerdcn@gmail.com> (https://twitter.com/cryptonerdcn)"]
edition = "2018"
description = "WASM runtime for Cairo language and Starknet"
license = "Apache-2.0"
repository = "https://github.com/cryptonerdcn/wasm-cairo.git"
keywords = ["no_std", "wasm", "cairo", "starkware", "starknet", "zero-knowledge", "zk", "dapp", "zk-STARK", "zkSTARK", "off-chain"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook", "wee_alloc"]

[dependencies]
clap = { version = "4.2.5", features = ["derive"] }
serde_json = "1.0.91"
wasm-bindgen = "0.2.87"
cairo-lang-starknet = { package = "cairo-lang-starknet", git = "https://github.com/cryptonerdcn/cairo.git", rev = "43391f82cb6d7486aa030903f05b1eb50138cea3"}
cairo-lang-compiler = { package = "cairo-lang-compiler", git = "https://github.com/cryptonerdcn/cairo.git", rev = "43391f82cb6d7486aa030903f05b1eb50138cea3"}
cairo-lang-runner = { package = "cairo-lang-runner", git = "https://github.com/cryptonerdcn/cairo.git", rev = "43391f82cb6d7486aa030903f05b1eb50138cea3", features = ["alloc"], default-features = false}
cairo-lang-test-runner = { package = "cairo-lang-test-runner", git = "https://github.com/cryptonerdcn/cairo.git", rev = "43391f82cb6d7486aa030903f05b1eb50138cea3", features = ["alloc"], default-features = false}


# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"
rust-embed = "6.7.0"

[dependencies.anyhow]
version = "1.0.69"
default-features = false


[profile.release]
lto = true
# Tell `rustc` to optimize for small code size.
opt-level = "s"
codegen-units = 1
strip = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
parking_lot_core = "=0.8.0"

[[bin]]
name = "wasm-cairo"
path = "src/cli.rs"